--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-movie-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
+  "homepage": "https://nvanha.github.io/react-movie-app/",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
